--- a/assets/css/tailwind-output.css
+++ b/assets/css/tailwind-output.css
@@ -12,6 +12,7 @@
     --font-weight-semibold: 600;
     --font-weight-extrabold: 800;
     --font-weight-black: 900;
+    --radius-md: 0.375rem;
     --default-font-family: var(--font-sans);
     --default-font-feature-settings: var(--font-sans--font-feature-settings);
     --default-font-variation-settings: var(--font-sans--font-variation-settings);
@@ -162,6 +163,9 @@
   }
 }
 @layer utilities {
+  .collapse {
+    visibility: collapse;
+  }
   .absolute {
     position: absolute;
   }
@@ -207,6 +211,9 @@
   .my-\[0\.3rem\] {
     margin-block: 0.3rem;
   }
+  .my-\[0\.5rem\] {
+    margin-block: 0.5rem;
+  }
   .my-\[1\.75rem\] {
     margin-block: 1.75rem;
   }
@@ -240,6 +247,9 @@
   .mr-0 {
     margin-right: calc(var(--spacing) * 0);
   }
+  .mb-\[0\.5rem\] {
+    margin-bottom: 0.5rem;
+  }
   .mb-\[1\.25rem\] {
     margin-bottom: 1.25rem;
   }
@@ -264,14 +274,32 @@
   .ml-\[calc\(var\(--sidebar-width\)\+var\(--sidebar-margin-left\)\)\] {
     margin-left: calc(var(--sidebar-width) + var(--sidebar-margin-left));
   }
+  .block {
+    display: block;
+  }
   .flex {
     display: flex;
+  }
+  .grid {
+    display: grid;
   }
   .hidden {
     display: none;
   }
+  .inline {
+    display: inline;
+  }
   .inline-block {
     display: inline-block;
+  }
+  .inline-flex {
+    display: inline-flex;
+  }
+  .list-item {
+    display: list-item;
+  }
+  .table {
+    display: table;
   }
   .h-\[1\.5rem\] {
     height: 1.5rem;
@@ -291,26 +319,11 @@
   .h-\[var\(--sidebar-width\)\] {
     height: var(--sidebar-width);
   }
-  .h-full {
-    height: 100%;
-  }
-  .h-min {
-    height: min-content;
-  }
   .h-screen {
     height: 100vh;
   }
-  .max-h-\[calc\(100\%-var\(--sidebar-margin-top\)\)\] {
-    max-height: calc(100% - var(--sidebar-margin-top));
-  }
-  .max-h-min {
-    max-height: min-content;
-  }
-  .min-h-\[calc\(100\%-var\(--sidebar-width\)\)\] {
-    min-height: calc(100% - var(--sidebar-width));
-  }
-  .min-h-full {
-    min-height: 100%;
+  .min-h-\[calc\(100\%-var\(--sidebar-width\)\/2\)\] {
+    min-height: calc(100% - var(--sidebar-width) / 2);
   }
   .w-\[1\.5rem\] {
     width: 1.5rem;
@@ -360,11 +373,17 @@
   .flex-\[0_0_8rem\] {
     flex: 0 0 8rem;
   }
+  .border-collapse {
+    border-collapse: collapse;
+  }
   .transform {
     transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
   }
   .cursor-pointer {
     cursor: pointer;
+  }
+  .resize {
+    resize: both;
   }
   .list-outside {
     list-style-position: outside;
@@ -387,8 +406,8 @@
   .gap-\[0\.5rem\] {
     gap: 0.5rem;
   }
-  .gap-\[2rem\] {
-    gap: 2rem;
+  .gap-\[5rem\] {
+    gap: 5rem;
   }
   .overflow-hidden {
     overflow: hidden;
@@ -398,6 +417,9 @@
   }
   .rounded-\[50\%\] {
     border-radius: 50%;
+  }
+  .rounded-md {
+    border-radius: var(--radius-md);
   }
   .border {
     border-style: var(--tw-border-style);
@@ -421,8 +443,11 @@
   .fill-\[var\(--header-bg\)\] {
     fill: var(--header-bg);
   }
-  .p-\[0\.5em\] {
-    padding: 0.5em;
+  .px-\[1em\] {
+    padding-inline: 1em;
+  }
+  .py-\[0\.5em\] {
+    padding-block: 0.5em;
   }
   .py-\[0\.85rem\] {
     padding-block: 0.85rem;
@@ -526,6 +551,13 @@
   .italic {
     font-style: italic;
   }
+  .underline {
+    text-decoration-line: underline;
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
   .clipcirc-radius-\[45\%\] {
     --clip-circ-radius: 45%;
     clip-path: circle(var(--clip-circ-radius) at var(--clip-circ-x) var(--clip-circ-y));
@@ -567,16 +599,12 @@ html {
   font-size: 16px;
 }
 body {
-  height: min-content;
   min-height: 100vh;
   max-width: 100%;
   position: relative;
   margin: 0;
   display: grid;
   grid-template-rows: min-content min-content;
-}
-* {
-  outline: 1px solid red;
 }
 @font-face {
   font-family: 'Poppins';
@@ -711,4 +739,9 @@ body {
 @property --tw-tracking {
   syntax: "*";
   inherits: false;
+}
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
 }
